# libdisplaydevice

./: .codeql-prebuild-cpp-Linux.sh  .codeql-prebuild-cpp-Windows.sh  .codeql-prebuild-cpp-macOS.sh  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  MACOS-PLAN.md  README.md  README.rst  codecov.yml  sonar-project.properties
docs/: CMakeLists.txt  Doxyfile  environment.yml
docs/doxygen/: header.html
scripts/: parsec-vdd.ps1  pyproject.toml  requirements.txt  update_clang_format.py  virtual-display-rs.ps1
src/: CMakeLists.txt  logging.cpp  logging.h  main.cpp
src/common/: CMakeLists.txt  factory.cpp  file_settings_persistence.cpp  filesettingspersistence.cpp  json.cpp  json_serializer.cpp  jsonserializer.cpp  logging.cpp  noop_audio_context.cpp  noop_settings_persistence.cpp  noopaudiocontext.cpp  noopsettingspersistence.cpp  retry_scheduler.cpp  retryscheduler.cpp  types.cpp
src/common/include/display_device/: audio_context_interface.h  display_power_interface.h  factory.h  file_settings_persistence.h  json.h  logging.h  noop_audio_context.h  noop_settings_persistence.h  retry_scheduler.h  settings_manager_interface.h  settings_persistence_interface.h  types.h
src/common/include/display_device/detail/: json_converter.h  json_serializer.h  json_serializer_details.h  persistent_state_utils.h  settings_state_utils.h
src/common/include/displaydevice/: audio_context_interface.h  audiocontextinterface.h  file_settings_persistence.h  filesettingspersistence.h  json.h  logging.h  noop_settings_persistence.h  noopaudiocontext.h  noopsettingspersistence.h  retryscheduler.h  settings_manager_interface.h  settings_persistence_interface.h  settingsmanagerinterface.h  settingspersistenceinterface.h  types.h
src/common/include/displaydevice/detail/: jsonserializer.h  jsonserializerdetails.h
src/display_device/: CMakeLists.txt  libddplaceholder.cpp
src/displaydevice/: CMakeLists.txt  libddplaceholder.cpp
src/macos/: CMakeLists.txt  display_power.cpp  factory.cpp  json.cpp  json_serializer.cpp  mac_api_layer.cpp  mac_api_utils.cpp  mac_display_device_general.cpp  mac_display_device_hdr.cpp  mac_display_device_modes.cpp  mac_display_device_primary.cpp  mac_display_device_topology.cpp  persistent_state.cpp  settings_manager_apply.cpp  settings_manager_general.cpp  settings_manager_revert.cpp  settings_utils.cpp  types.cpp
src/macos/include/display_device/macos/: display_power.h  json.h  mac_api_layer.h  mac_api_layer_interface.h  mac_api_utils.h  mac_display_device.h  mac_display_device_interface.h  persistent_state.h  settings_utils.h  (+2 more)
src/platf/: CMakeLists.txt  libplatfplaceholder.cpp
src/platf/windows/: winapilayer.cpp
src/windows/: CMakeLists.txt  display_power.cpp  factory.cpp  json.cpp  json_serializer.cpp  jsonserializer.cpp  persistent_state.cpp  persistentstate.cpp  settings_manager_apply.cpp  settings_manager_general.cpp  settings_manager_revert.cpp  settings_utils.cpp  settingsmanagerapply.cpp  settingsmanagergeneral.cpp  settingsmanagerrevert.cpp  settingsutils.cpp  types.cpp  win_api_layer.cpp  win_api_utils.cpp  win_display_device_general.cpp  win_display_device_hdr.cpp  win_display_device_modes.cpp  win_display_device_primary.cpp  win_display_device_topology.cpp  winapilayer.cpp  winapiutils.cpp  windisplaydevicegeneral.cpp  windisplaydevicehdr.cpp  windisplaydevicemodes.cpp  windisplaydeviceprimary.cpp  windisplaydevicetopology.cpp  winutils.cpp
tests/: CMakeLists.txt  conftest.cpp  utils.cpp  utils.h
tests/fixtures/: CMakeLists.txt  comparison.cpp  fixtures.cpp  fixtures.h  test_utils.cpp  testutils.cpp  testutils.h  utils.cpp  utils.h
tests/fixtures/include/fixtures/: comparison.h  fixtures.h  json_converter_test.h  jsonconvertertest.h  mock_audio_context.h  mock_settings_persistence.h  mockaudiocontext.h  mocksettingspersistence.h  test_utils.h
tests/unit/: CMakeLists.txt  test_logging.cpp  test_sample.cpp
tests/unit/general/: CMakeLists.txt  test_comparison.cpp  test_edid_parsing.cpp  test_factory.cpp  test_file_settings_persistence.cpp  test_filesettingspersistence.cpp  test_json.cpp  test_json_converter.cpp  test_jsonconverter.cpp  test_logging.cpp  test_noop_audio_context.cpp  test_noop_settings_persistence.cpp  test_noopaudiocontext.cpp  test_noopsettingspersistence.cpp  test_retry_scheduler.cpp  test_retryscheduler.cpp  test_sample.cpp
tests/unit/macos/: CMakeLists.txt  test_display_power.cpp  test_json_converter.cpp  test_mac_api_layer.cpp  test_mac_api_utils.cpp  test_mac_display_device.cpp  test_persistent_state.cpp  test_settings_manager.cpp  test_settings_utils.cpp
tests/unit/macos/utils/: mock_mac_api_layer.h  mock_mac_display_device.h
tests/unit/platf/linux/: test_linux_sample.cpp
tests/unit/platf/windows/: test_winapilayer.cpp
tests/unit/windows/: CMakeLists.txt  test_comparison.cpp  test_display_power.cpp  test_json_converter.cpp  test_jsonconverter.cpp  test_persistent_state.cpp  test_persistentstate.cpp  test_settings_manager_apply.cpp  test_settings_manager_general.cpp  test_settings_manager_revert.cpp  test_settings_utils.cpp  test_settingsmanagerapply.cpp  test_settingsmanagergeneral.cpp  test_settingsmanagerrevert.cpp  test_settingsutils.cpp  test_win_api_layer.cpp  test_win_api_utils.cpp  test_win_display_device_general.cpp  test_win_display_device_hdr.cpp  test_win_display_device_modes.cpp  test_win_display_device_primary.cpp  test_win_display_device_topology.cpp  test_win_playground.cpp  test_winapilayer.cpp  test_winapiutils.cpp  test_windisplaydevicegeneral.cpp  test_windisplaydevicehdr.cpp  test_windisplaydevicemodes.cpp  test_windisplaydeviceprimary.cpp  test_windisplaydevicetopology.cpp  test_winplayground.cpp  test_winutils.cpp
tests/unit/windows/mocks/: mockwinapilayer.cpp  mockwinapilayer.h
tests/unit/windows/utils/: comparison.cpp  comparison.h  guards.cpp  guards.h  helpers.cpp  helpers.h  mock_win_api_layer.cpp  mock_win_api_layer.h  mock_win_display_device.cpp  mock_win_display_device.h  mockwinapilayer.cpp  mockwinapilayer.h  mockwindisplaydevice.cpp  mockwindisplaydevice.h
(+42 files in other folders)
